<resources>
    <string name="app_name">Good Food</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_msg">A platform for recipe sharing</string>
    <string name="forgot_password_link">Forgot password?</string>
    <string name="signup_link">Don\'t have an account? Signup</string>
    <string name="login_link">Already have an account? Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select">Select</string>
    <string name="get_image_from">Get image from</string>
    <string name="profile_pic_perm_note">All permissions are necessary to set the profile pic</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="password_atleast_6_chars">Password should be atleast 6 characters long</string>
    <string name="please_enter_valid_password">Please enter valid password</string>
    <string name="home_feed">Home Feed</string>
    <string name="my_recipes">My Recipes</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="complaints">Complaints</string>
    <string name="logout">Log out</string>
    <string name="explore">Explore</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_confirm_msg">Are you sure, you want to logout?</string>
    <string name="purchased_recipes">Purchased Recipes</string>
    <string name="payment_history">Payment History</string>

    <!--    dummy texts-->
    <string name="lorem_title">Lorem ipsum dolor sit amet</string>
    <string name="lorem_brief">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Excepteur sint occaecat cupidatat non proident.</string>
    <string name="lorem_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="please_again_press_back_to_exit">Please again press back to exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="title">Title</string>
    <string name="short_desc">Short Description</string>
    <string name="full_description">Full Description</string>
    <string name="photos">Photos</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_video">Add Video</string>
    <string name="videos">Videos</string>
    <string name="optional_survey">Optional Survey</string>
    <string name="unable_to_record">Unable to record</string>
    <string name="saving_video_plz_wt">Saving video please wait</string>
    <string name="start">Start</string>
    <string name="battery_status">Battery Status</string>
    <string name="stop">Stop</string>
    <string name="plz_try_again_sorry_abt_incv">Please try again sorry about inconvenience</string>
    <string name="copying_file_plz_wt">Copying the file please wait…</string>
    <string name="plz_wt_until_files_upload">Please wait until files upload</string>
    <string name="description">Description</string>
    <string name="price">Price($):</string>
    <string name="recipe_data_uploaded">Recipe data uploaded</string>
    <string name="purchase">Purchase</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="plz_login_again">Please login again, session expired</string>
    <string name="upload_started">Upload Started</string>
    <string name="recipes_photos_are_uploading">Recipe photos are uploading</string>
    <string name="recipes_photos_uploaded">Recipe photos uploaded</string>
    <string name="recipes_videos_are_uploading">Recipe videos are uploading</string>
    <string name="recipe_videos_uploaded">Recipe videos are uploaded</string>
    <string name="recipe_uploaded">Recipe uploaded</string>
    <string name="recipe_upload_failed">Recipe uplaod failed</string>
    <string name="comments">Comments</string>
</resources>

