<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.goodfood.app.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingStart="@dimen/dimen_size_50"
            android:paddingEnd="@dimen/dimen_size_50">

            <TextView
                style="@style/BasicText"
                android:text="@string/email" />

            <EditText
                style="@style/BasicEditText"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edt_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                style="@style/BasicText"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/BasicEditText"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_forgot_password"
                style="@style/BasicText"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dimen_size_5"
                android:onClick="@{() -> viewModel.navigateToForgotPassword()}"
                android:text="@string/forgot_password_link"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/btn_login"
                style="@style/BasicButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:text="@string/login" />
        </LinearLayout>


        <TextView
            android:id="@+id/txt_signup"
            style="@style/BasicText"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/dialog_bg"
            android:gravity="center"
            android:onClick="@{() -> viewModel.navigateToSignUp()}"
            android:padding="@dimen/dimen_size_10"
            android:text="@string/signup_link"
            android:textColor="@color/teal_700" />

    </RelativeLayout>

</layout>