<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_size_20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_dialog_title"
                style="@style/BasicText"
                android:text="@string/logout"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_dialog_message"
                style="@style/BasicText"
                android:layout_marginTop="@dimen/dimen_size_10"
                android:gravity="center"
                android:text="@string/logout_confirm_msg"
                android:textSize="@dimen/text_size_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_dialog_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_dialog_message">

                <Button
                    android:id="@+id/btn_yes"
                    style="@style/BasicButton"
                    android:layout_marginEnd="@dimen/dimen_size_10"
                    android:minHeight="@dimen/dimen_size_40"
                    android:text="@string/yes" />

                <Button
                    android:id="@+id/btn_no"
                    style="@style/BasicButton"
                    android:layout_marginStart="@dimen/dimen_size_10"
                    android:minHeight="@dimen/dimen_size_40"
                    android:text="@string/no" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>