<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dimen_size_5"
            android:paddingEnd="@dimen/dimen_size_5"
            tools:context=".ui.home.fragments.create_recipe.CreateRecipeFragment">


            <TextView
                style="@style/BasicText"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:text="@string/title" />

            <EditText
                android:id="@+id/edt_recipe_title"
                style="@style/BasicEditText" />

            <TextView
                style="@style/BasicText"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:text="@string/short_desc" />

            <EditText
                android:id="@+id/edt_recipe_brief"
                style="@style/BasicEditText"
                android:lines="4"
                android:singleLine="false" />

            <TextView
                style="@style/BasicText"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:text="@string/full_description" />

            <EditText
                android:id="@+id/edt_recipe_description"
                style="@style/BasicEditText"
                android:lines="10"
                android:singleLine="false" />

            <LinearLayout
                android:id="@+id/lin_recipe_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/BasicText"
                    android:layout_marginTop="@dimen/dimen_size_20"
                    android:text="@string/photos" />

                <com.airbnb.epoxy.EpoxyRecyclerView
                    android:id="@+id/recycler_recipe_photos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginTop="@dimen/dimen_size_10"
                    tools:listitem="@layout/item_recipe_photo_data"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3" />

                <ImageView
                    android:id="@+id/img_pick_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_size_10"
                    android:src="@drawable/ic_camera" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_size_1"
                android:layout_marginTop="@dimen/dimen_size_5"
                android:background="@color/faint_grey_text" />

            <LinearLayout
                android:id="@+id/lin_recipe_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_5"
                android:layout_marginBottom="@dimen/dimen_size_20"
                android:orientation="vertical">

                <TextView
                    style="@style/BasicText"
                    android:text="@string/videos" />

                <com.airbnb.epoxy.EpoxyRecyclerView
                    android:id="@+id/recycler_recipe_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_size_10" />

                <ImageView
                    android:id="@+id/img_pick_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_size_10"
                    android:src="@drawable/ic_movie_clapper" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>