<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.goodfood.app.models.domain.Recipe" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.home.fragments.recipe_detail.RecipeDetailFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.goodfood.app.ui.common.widgets.RecipeImagePagerLayout
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_size_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:setRecipeImages="@{model.imgUrls}" />


                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/lin_recipe_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/BasicText"
                        android:text="@string/videos" />

                    <com.airbnb.epoxy.EpoxyRecyclerView
                        android:id="@+id/recycler_recipe_videos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_size_5"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_size_0_5"
                        android:layout_marginTop="@dimen/dimen_size_10"
                        android:layout_marginBottom="@dimen/dimen_size_10"
                        android:background="@color/faint_grey_text" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_recipe_title"
                    style="@style/BasicText"
                    android:text="@{model.recipeTitle}"
                    android:textSize="@dimen/text_size_18"
                    tools:text="Lorem Ipsum" />

                <TextView
                    android:id="@+id/txt_recipe_description"
                    style="@style/BasicText"
                    android:layout_marginStart="@dimen/dimen_size_50"
                    android:layout_marginBottom="@dimen/dimen_size_80"
                    android:letterSpacing="0.1"
                    android:text="@{model.recipeBrief}"
                    android:textColor="@color/faint_grey_text"
                    tools:text="@string/lorem_para" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_purchase"
            style="@style/BasicButton"
            android:layout_width="match_parent"
            android:elevation="@dimen/dimen_size_1"
            android:text="@string/purchase"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

